syntax = "proto3"; // proto 版本

package core; // 包名

//获取
message GetServerByIdParams {
  string Id = 1;
  int32 Category = 3; // 1.用户,房间
}

message GetServerByIdRsp {
  int32 Code = 1;
  string ServerId = 2;
}

//获取房间内成员列表
message GetMembersParams {
  string Rid = 1;
  string ServerId = 2;
}

message GetMembersRsp {
  int32 Count = 1;
  repeated string Ids = 2;
  int32 OnlineCount = 3;
}

//汇报 用户断开链接 或者 已经退出登录
message ReportOnlineParams {
  string Id = 1;
  string ServerId = 2;
  int32 Category = 3;
  int32 Status = 4; //1.上线 2.离线
}

message ReportOnlineRsp {
  int32 Code = 1;
  string id = 2;
}

//汇报节点活跃信息
message ReportServerStatusParams{
  string ServerId = 1;
  int32 Status = 2;
}

message ReportServerStatusRsp{
  int32 Code = 1;
}

//创建临时聊天室
message CreateChatRoomParams {
  string UserId = 1;//创建者
}

message CreateChatRoomRsp {
  int32 Code = 1;
  string RoomId = 2;
  string ServerId = 3;
}

//加入聊天室
message JoinChatRoomParams{
  string RoomId = 1;
  string UserId = 2;
}

message JoinChatRoomRsp{
  int32 Code = 1;
}

//获取聊天室列表
message GetChatRoomListParams{

}

message GetChatRoomListRsp{
  int32 Code = 1;
  repeated string RoomIds = 2;
}

service CenterServer {
  //获取用户所在Server
  rpc GetServer (GetServerByIdParams) returns (GetServerByIdRsp) {
  }
  //获取房间内成员
  rpc GetRoomMembers (GetMembersParams) returns (GetMembersRsp) {
  }
  //断线汇报
  rpc OnlineReport (ReportOnlineParams) returns (ReportOnlineRsp) {
  }
  //节点通知
  rpc OnServerChange  (ReportServerStatusParams) returns (ReportServerStatusRsp){
  }
  //创建临时聊天室
  rpc CreateChatRoom (CreateChatRoomParams) returns (CreateChatRoomRsp){
  }

  //加入聊天室
  rpc JoinChatRoom (JoinChatRoomParams) returns (JoinChatRoomRsp){

  }

  //获取聊天室列表
  rpc GetChatRoom (GetChatRoomListParams) returns (GetChatRoomListParams){

  }
}